# ACC_Dashboard

./: .gitignore  CMakeLists.txt
GUI/: CMakeLists.txt  gui.cpp  gui.h
GUI/Fonts/: din_bold_100.c  din_bold_24.c  din_bold_50.c  fonts.h
GUI/Screens/: mainDashboard.cpp  mainDashboard.h
GUI/Styles/: styles.cpp  styles.h
app/: CMakeLists.txt  main.cpp
includes/: Version.h  Version.h.in
src/: CMakeLists.txt
